--- a/ansible_go_examples/bahmni-85/setup.yml
+++ b/ansible_go_examples/bahmni-85/setup.yml
@@ -1,4 +1,7 @@
 bahmni_repo_url: http://bahmni-repo.twhosted.com/rpm/bahmni/
 implementation_name: possible
 timezone: Asia/Kolkata
+SSLCertificateFilePath: /etc/letsencrypt/live/possible-master.mybahmni.org/cert.pem
+SSLCertificateKeyFilePath: /etc/letsencrypt/live/possible-master.mybahmni.org/privkey.pem
+SSLCertificateChainFilePath: /etc/letsencrypt/live/possible-master.mybahmni.org/chain.pem
 omods: ["https://github.com/Possiblehealth/program-auto-enrollment/releases/download/1.0.1/programautoenrolment-1.0-SNAPSHOT.omod"]
