--- a/ansible_go_examples/bahmni-87/setup.yml
+++ b/ansible_go_examples/bahmni-87/setup.yml
@@ -2,7 +2,7 @@ bahmni_repo_url: http://bahmni-repo.twhosted.com/rpm/bahmni/
 implementation_name: possible
 selinux_state: disabled
 timezone: Asia/Kolkata
-omods: ["https://s3.ap-south-1.amazonaws.com/possible-artifacts/bahmnicore-omod-0.87-SNAPSHOT.omod"]
+omods: ["https://s3.ap-south-1.amazonaws.com/possible-artifacts/37.1/bahmnicore-omod-0.87-SNAPSHOT.omod"]
 SSLCertificateFilePath: /etc/letsencrypt/live/possible-master.mybahmni.org/cert.pem
 SSLCertificateKeyFilePath: /etc/letsencrypt/live/possible-master.mybahmni.org/privkey.pem
 SSLCertificateChainFilePath: /etc/letsencrypt/live/possible-master.mybahmni.org/chain.pem
