--- a/ansible_go_examples/bahmni-88/setup.yml
+++ b/ansible_go_examples/bahmni-88/setup.yml
@@ -2,3 +2,6 @@ bahmni_repo_url: http://repo.mybahmni.org.s3-website-ap-southeast-1.amazonaws.co
 implementation_name: possible
 selinux_state: disabled
 timezone: Asia/Kolkata
+SSLCertificateFilePath: /etc/letsencrypt/live/possible-qa.mybahmni.org/cert.pem
+SSLCertificateKeyFilePath: /etc/letsencrypt/live/possible-qa.mybahmni.org/privkey.pem
+SSLCertificateChainFilePath: /etc/letsencrypt/live/possible-qa.mybahmni.org/chain.pem
